2020-02-08 Wiley E. Hill <wileyhill@gmail.com>

    * po/fr.po: Update French translations.

    * po/he.po: Update Hebrew translations.

    * po/hu.po: Update Hungarian translations.

    * po/it.po: Update Italian translations.

    * po/ja.po: Update Japanese translations.

    * po/kh.po: Update Khmer translations.

    * po/ml.po: Updated Malayalam translations.

    * po/nl.po: Update Dutch translations.

    * po/pl.po: Update Polish translations.

2020-02-02 Wiley E. Hill <wileyhill@gmail.com>

    * po/fa.po: Update Persian translations.
    * po/fi.po: Update Finnish translations.

2020-02-01 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.
    * po/ar.po: Update Arabic translations.
    * po/bg.po: Update Bulgarian translations.
    * po/bs.po: Update Bosnian translations.
    * po/de.po: Update German translations.
    * po/el.po: Update Greek translations.

    * po/es.po: Update Spanish translations.

2020-01-25 Wiley E. Hill <wileyhill@gmail.com>

    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.
    * po/ru.po: Update Russian translations.
    * po/sl.po: Update Slovenian translations.
    * po/sr.po: Update Serbian translations.
    * po/tr.po: Update Turkish translations.
    * po/zh_CN.po: Update Chinese simplified translations.
    * po/zh_TW.po: Update Chinese traditional translations.

2020-01-22 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_menus.c: Revise x_menu_execute to check that
      geda_action_get_action_name returned a pointer and
      send an error message to stderr if action name is NULL.

2020-01-18 Wiley E. Hill <wileyhill@gmail.com>

    * po/fr.po: Update French translations.
    * po/he.po: Update Hebrew translations.
    * po/hu.po: Update Hungarian translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.